# raygauge

./: .travis.yml  CMakeLists.txt  main.cpp  readme.md
libs/Circle/: Circle.cpp  Circle.h
libs/Rectangle/: Rectangle.cpp  Rectangle.h
